--- a/frontend/src/components/common/ModalStyle.css
+++ b/frontend/src/components/common/ModalStyle.css
@@ -63,6 +63,7 @@
     font-size: 1rem;
     color: #555;
     margin-bottom: 25px;
+    white-space: pre-line;
 }
 
 .custom-modal-content .modal-actions {
